k8s/applications/network/adguard/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: adguard
  annotations:
    io.cilium/lb-ipam-ips: 10.25.150.241
spec:
  type: LoadBalancer
  selector:
    app: adguard
  ports:
    - name: dns-tcp
      protocol: TCP
      port: 53
      targetPort: 53
    - name: dns-udp
      protocol: UDP
      port: 53
      targetPort: 53
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
    - name: https
      protocol: TCP
      port: 443
      targetPort: 443
    - name: admin
      protocol: TCP
      port: 3000
      targetPort: 3000
# Add other ports as needed (see Docker run ports)
