k8s/applications/network/adguard/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: adguard
  annotations:
    io.cilium/lb-ipam-ips: 10.25.150.241
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  ports:
    - name: http
      protocol: TCP
      port: 3000
    - name: dns-tcp
      port: 53
      protocol: TCP
    - name: dns-udp
      port: 53
      protocol: UDP
    - name: dchp
      port: 67
      protocol: UDP
    - name: dns-tls
      port: 853
      protocol: TCP
  selector:
    app: adguard
