k8s/applications/network/adguard/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: adguard-home
spec:
  parentRefs:
    - name: internal
      namespace: gateway
  hostnames:
    - "adguard.pc-tips.se"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: adguard
          port: 80
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: adguard
          port: 3000
